# microHeartMonitor

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  coverage.lcov  possible_name_idea.md  tm4c123g.cmake
cmake/: cppcheck.cmake  cpputest.cmake  tm4c123g.cmake
cmake_files/: cpputest.cmake  tm4c123g.cmake
cppcheck/: suppressions.txt
docs/: CMakeLists.txt  README.md  doc_gen.py  doxyfile  index.html  main_seq.plantuml
docs/arm_gcc_help/: help_as.txt  help_gcc.txt  help_gdb.txt  help_ld.txt
docs/doxygen/: DoxygenLayout.xml  call.dot  data_flow.dot  doxyfile  group_defs.dox  main1_init.dot  main2_superloop.dot  main3_daq.dot  main4_proc.dot  main5_lcd.dot  mainpage.md  qrs_preproc.dot  topics.dox
docs/doxygen/html/: _a_d_c_8c.html  _a_d_c_8c__incl.map  _a_d_c_8c__incl.md5  _a_d_c_8h.html  _a_d_c_8h__dep__incl.map  _a_d_c_8h__dep__incl.md5  _d_a_q_8c.html  _d_a_q_8c__incl.map  _d_a_q_8c__incl.md5  _d_a_q_8h.html  _d_a_q_8h__dep__incl.map  _d_a_q_8h__dep__incl.md5  _d_a_q_8h__incl.map  _d_a_q_8h__incl.md5  _d_a_q__lookup_8c.html  _d_a_q__lookup_8c__incl.map  _d_a_q__lookup_8c__incl.md5  _debug_8c.html  _debug_8c__incl.map  _debug_8c__incl.md5  _debug_8h.html  _debug_8h__dep__incl.map  _debug_8h__dep__incl.md5  _debug_8h__incl.map  _debug_8h__incl.md5  _fifo_8c.html  _fifo_8c__incl.map  _fifo_8c__incl.md5  _fifo_8h.html  _fifo_8h__dep__incl.map  _fifo_8h__dep__incl.md5  _fifo_8h__incl.map  _fifo_8h__incl.md5  _font_8c.html  _font_8c__incl.map  _font_8c__incl.md5  _g_p_i_o_8c.html  _g_p_i_o_8c__incl.map  _g_p_i_o_8c__incl.md5  _g_p_i_o_8h.html  (+284 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_7.js  (+67 more)
docs/doxygen_files/: call.dot  data_flow.dot  doxyfile  group_defs.dox
docs/figures/: README.md
docs/help/: help_clang-format.txt  help_objdump.txt
docs/resources/: README.md
docs/resources/help/: help_cpp.txt  help_dot.txt  help_gcovr.txt
python/: adc_lookup.txt  filt_design.ipynb  lookup_gen.py
src/: CMakeLists.txt  README.md  main.c  main.dox  main_rtos.c
src/app/: CMakeLists.txt  DAQ.c  DAQ.h  DAQ_lookup.c  Debug.c  Debug.h  Filter.h  Font.c  LCD.c  LCD.h  QRS.c  QRS.h  UserCtrl.c  UserCtrl.h  app.dox  lookup.h  qrs_filt_design.ipynb
src/common/: CMakeLists.txt  FIFO.c  FIFO.h  Fifo.c  Fifo.h  Fifo2.c  Fifo2.h  ISR.c  ISR.h  NewAssert.c  NewAssert.h  common.dox  fifo_buff.c  fifo_buff.h  lookup.c  lookup.h
src/device/: CMakeLists.txt  startup_gcc.c  tm4c123g.cmake  tm4c123gh6pm.h  tm4c123gh6pm.ld
src/drivers/: ADC.c  ADC.h  ADC_New.c  ADC_New.h  CMakeLists.txt  GPIO.c  GPIO.h  GPIO_New.c  GPIO_New.h  ILI9341.c  ILI9341.h  ISR.c  ISR.h  Led.c  Led.h  PLL.c  PLL.h  SPI.c  SPI.h  SPI_New.c  SPI_New.h  SysTick.c  SysTick.h  Timer.c  Timer.h  TimerNew.c  TimerNew.h  UART.c  UART.h  UART_New.c  UART_New.h  drivers.dox  i2c.c  i2c.h  isr.c  pwm.c  pwm.h  sysctrl.c  sysctrl.h
src/middleware/: CMakeLists.txt  Debug.c  Debug.h  ILI9341.c  ILI9341.h  Led.c  Led.h  middleware.dox
src/old_or_unused/: GPIO.h  SPI.c  SPI.h  Timer.c  UART.h  test_uart_interrupt.c
src/test/: CMakeLists.txt  test_adc.c  test_daq.c  test_daq_old.c  test_debug.c  test_fifo.c  test_fifo_buff.c  test_gpio_int.c  test_gpio_new.c  test_ili9341_blinkdisplay.c  test_lcd_color.c  test_lcd_image.c  test_lcd_scroll.c  test_pll.c  test_qrs.c  test_spi.c  test_systick_int.c  test_timer0.c  test_timer1_int.c  test_uart_interrupt.c  test_uart_la.c  test_uart_write.c  test_userctrl.c
src/test/ili9341/: CMakeLists.txt  test_ili9341_blinkdisplay.c  test_lcd_color.c
src/test_scripts/: CMakeLists.txt  test_adc.c  test_daq.c  test_debug.c  test_fifo.c  test_freertos_blink.c  test_gpio_int.c  test_gpio_new.c  test_ili9341_blinkdisplay.c  test_isr_relocate.c  test_lcd_image.c  test_lcd_letters.c  test_lcd_scroll.c  test_pll.c  test_qrs.c  test_spi.c  test_sysctrl_pll.c  test_systick_int.c  test_timer0.c  test_timer1_int.c  test_uart_interrupt.c  test_uart_la.c  test_uart_write.c
test/: CMakeLists.txt  README.md
test/mocks/: CMakeLists.txt  mock_GPIO.cpp  mock_SPI.cpp
test/src/: CMakeLists.txt  testGroup_FIFO.cpp  testGroup_Fifo2.cpp  testGroup_Led.cpp  testRunner_All.cpp  test_Led.cpp
test/stubs/: CMakeLists.txt  stub_GPIO.c  stub_NewAssert.c  stub_NewAssert.cpp
tools/: README.md  adc_lookup.txt  filt_plot_funcs.py
tools/JDS6600/: ecg_waveform.csv  ecg_waveform_gen.py  jds6600.py  load_ecg_waveform.py  test_jds6600.py
tools/cppcheck/: suppressions.txt
tools/data/: dataset_csv_gen.py
tools/filter_design/: aaf.ipynb  aaf_bode_100.csv  aaf_bode_40.csv  daq_filt_design.ipynb  daq_filt_fixedpoint.ipynb  filt_design.ipynb  filt_plot_funcs.py  pan_tom_funcs.py  qrs_filt_design.ipynb
tools/lookup_table/: adc_lookup.txt  adc_lookup_q31.txt  lookup_gen.py  lookup_gen_f32.py  lookup_gen_q31.py
